# serializer version: 1
# name: test_api[daily_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 80,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1011.5,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 2, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 17.9,
      'wind_direction': 255,
      'wind_gust': 6.8,
      'wind_speed': 3.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 79,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.04,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1011.3,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 5.7,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.9,
      'valid_time': datetime.datetime(2026, 4, 2, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 18.4,
      'wind_direction': 245,
      'wind_gust': 6.7,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 94,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.15,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1008.1,
      'symbol': 18,
      'temperature': 3.1,
      'temperature_max': 5.3,
      'temperature_min': 1.8,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 3.7,
      'valid_time': datetime.datetime(2026, 4, 3, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.7,
      'wind_direction': 27,
      'wind_gust': 5.6,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 64,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.12,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1001.9,
      'symbol': 6,
      'temperature': 7.1,
      'temperature_max': 8.4,
      'temperature_min': 1.5,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 3.0,
      'valid_time': datetime.datetime(2026, 4, 4, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 28.2,
      'wind_direction': 277,
      'wind_gust': 13.3,
      'wind_speed': 7.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 81,
      'low_cloud': 62,
      'max_precipitation': 16.2,
      'mean_precipitation': 0.72,
      'median_precipitation': 0.32,
      'medium_cloud': 100,
      'min_precipitation': 7.8,
      'precipitation_category': 1,
      'pressure': 999.0,
      'symbol': 18,
      'temperature': 8.3,
      'temperature_max': 8.3,
      'temperature_min': 2.1,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 17.4,
      'valid_time': datetime.datetime(2026, 4, 5, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.6,
      'wind_direction': 182,
      'wind_gust': 13.0,
      'wind_speed': 6.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 40,
      'low_cloud': 12,
      'max_precipitation': 4.8,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 2.4,
      'precipitation_category': 1,
      'pressure': 1001.5,
      'symbol': 4,
      'temperature': 10.3,
      'temperature_max': 10.3,
      'temperature_min': 4.0,
      'thunder': 0,
      'total_cloud': 88,
      'total_precipitation': 4.8,
      'valid_time': datetime.datetime(2026, 4, 6, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 36.0,
      'wind_direction': 290,
      'wind_gust': 19.6,
      'wind_speed': 9.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 37,
      'low_cloud': 12,
      'max_precipitation': 3.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 3.0,
      'precipitation_category': 1,
      'pressure': 1021.1,
      'symbol': 3,
      'temperature': 10.3,
      'temperature_max': 10.3,
      'temperature_min': 5.2,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 7, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 37.9,
      'wind_direction': 352,
      'wind_gust': 12.5,
      'wind_speed': 6.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 57,
      'low_cloud': 75,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1028.8,
      'symbol': 4,
      'temperature': 7.8,
      'temperature_max': 7.8,
      'temperature_min': 2.2,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 26.2,
      'wind_direction': 46,
      'wind_gust': 10.6,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 48,
      'low_cloud': 25,
      'max_precipitation': 32.4,
      'mean_precipitation': 0.05,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 22.8,
      'precipitation_category': 1,
      'pressure': 1024.4,
      'symbol': 3,
      'temperature': 6.5,
      'temperature_max': 6.5,
      'temperature_min': -1.5,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2026, 4, 9, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 34.8,
      'wind_direction': 104,
      'wind_gust': 10.3,
      'wind_speed': 5.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 47,
      'low_cloud': 38,
      'max_precipitation': 27.6,
      'mean_precipitation': 0.55,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 10.8,
      'precipitation_category': 1,
      'pressure': 1020.2,
      'symbol': 3,
      'temperature': 6.7,
      'temperature_max': 6.7,
      'temperature_min': -0.1,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 13.2,
      'valid_time': datetime.datetime(2026, 4, 10, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 36.1,
      'wind_direction': 103,
      'wind_gust': 10.4,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 50,
      'low_cloud': 38,
      'max_precipitation': 34.8,
      'mean_precipitation': 0.4,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 10.8,
      'precipitation_category': 1,
      'pressure': 1016.6,
      'symbol': 4,
      'temperature': 7.4,
      'temperature_max': 7.4,
      'temperature_min': 0.6,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 9.6,
      'valid_time': datetime.datetime(2026, 4, 11, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 26.0,
      'wind_direction': 136,
      'wind_gust': 11.5,
      'wind_speed': 5.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 51,
      'low_cloud': 38,
      'max_precipitation': 33.6,
      'mean_precipitation': 0.7,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 9.6,
      'precipitation_category': 1,
      'pressure': 1016.3,
      'symbol': 4,
      'temperature': 8.3,
      'temperature_max': 8.3,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 16.8,
      'valid_time': datetime.datetime(2026, 4, 12, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.6,
      'wind_direction': 119,
      'wind_gust': 11.1,
      'wind_speed': 5.1,
    }),
  ])
# ---
# name: test_api[hourly_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 80,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1011.5,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 17.9,
      'wind_direction': 255,
      'wind_gust': 6.8,
      'wind_speed': 3.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 79,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1011.3,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 18.4,
      'wind_direction': 245,
      'wind_gust': 6.7,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 82,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1011.1,
      'symbol': 6,
      'temperature': 10.3,
      'temperature_max': 10.3,
      'temperature_min': 10.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 13, 0, tzinfo=datetime.timezone.utc),
      'visibility': 16.3,
      'wind_direction': 229,
      'wind_gust': 6.2,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 89,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1010.8,
      'symbol': 6,
      'temperature': 10.1,
      'temperature_max': 10.1,
      'temperature_min': 10.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 14, 0, tzinfo=datetime.timezone.utc),
      'visibility': 11.3,
      'wind_direction': 266,
      'wind_gust': 4.2,
      'wind_speed': 1.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 91,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1010.3,
      'symbol': 6,
      'temperature': 9.6,
      'temperature_max': 9.6,
      'temperature_min': 9.6,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 15, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.7,
      'wind_direction': 258,
      'wind_gust': 3.7,
      'wind_speed': 1.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 91,
      'low_cloud': 100,
      'max_precipitation': 0.7,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1009.8,
      'symbol': 6,
      'temperature': 9.1,
      'temperature_max': 9.1,
      'temperature_min': 9.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 16, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.8,
      'wind_direction': 239,
      'wind_gust': 2.7,
      'wind_speed': 1.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 94,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1009.7,
      'symbol': 6,
      'temperature': 8.3,
      'temperature_max': 8.3,
      'temperature_min': 8.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 17, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.6,
      'wind_direction': 223,
      'wind_gust': 2.3,
      'wind_speed': 1.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1009.7,
      'symbol': 6,
      'temperature': 7.2,
      'temperature_max': 7.2,
      'temperature_min': 7.2,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 18, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.6,
      'wind_direction': 180,
      'wind_gust': 1.8,
      'wind_speed': 0.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1009.7,
      'symbol': 6,
      'temperature': 6.7,
      'temperature_max': 6.7,
      'temperature_min': 6.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 211,
      'wind_gust': 2.0,
      'wind_speed': 1.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1009.4,
      'symbol': 6,
      'temperature': 6.4,
      'temperature_max': 6.4,
      'temperature_min': 6.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 20, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.1,
      'wind_direction': 194,
      'wind_gust': 2.0,
      'wind_speed': 1.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1009.2,
      'symbol': 18,
      'temperature': 6.0,
      'temperature_max': 6.0,
      'temperature_min': 6.0,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 21, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.3,
      'wind_direction': 199,
      'wind_gust': 2.2,
      'wind_speed': 0.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.1,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1008.9,
      'symbol': 18,
      'temperature': 5.9,
      'temperature_max': 5.9,
      'temperature_min': 5.9,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 22, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 117,
      'wind_gust': 1.6,
      'wind_speed': 0.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 62,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.1,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1008.6,
      'symbol': 18,
      'temperature': 5.7,
      'temperature_max': 5.7,
      'temperature_min': 5.7,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 2, 23, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.6,
      'wind_direction': 181,
      'wind_gust': 1.2,
      'wind_speed': 0.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1008.2,
      'symbol': 18,
      'temperature': 5.3,
      'temperature_max': 5.3,
      'temperature_min': 5.3,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 138,
      'wind_gust': 1.2,
      'wind_speed': 0.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.1,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1007.8,
      'symbol': 18,
      'temperature': 5.0,
      'temperature_max': 5.0,
      'temperature_min': 5.0,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 1, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.0,
      'wind_direction': 193,
      'wind_gust': 1.9,
      'wind_speed': 0.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1007.4,
      'symbol': 18,
      'temperature': 5.0,
      'temperature_max': 5.0,
      'temperature_min': 5.0,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 2, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.4,
      'wind_direction': 192,
      'wind_gust': 1.1,
      'wind_speed': 0.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.3,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1007.1,
      'symbol': 18,
      'temperature': 4.8,
      'temperature_max': 4.8,
      'temperature_min': 4.8,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 3, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.1,
      'wind_direction': 172,
      'wind_gust': 1.3,
      'wind_speed': 0.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1006.9,
      'symbol': 18,
      'temperature': 4.7,
      'temperature_max': 4.7,
      'temperature_min': 4.7,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 4, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.0,
      'wind_direction': 32,
      'wind_gust': 1.3,
      'wind_speed': 0.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1007.0,
      'symbol': 18,
      'temperature': 4.4,
      'temperature_max': 4.4,
      'temperature_min': 4.4,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 5, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.2,
      'wind_direction': 48,
      'wind_gust': 5.6,
      'wind_speed': 2.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.3,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1007.1,
      'symbol': 18,
      'temperature': 4.2,
      'temperature_max': 4.2,
      'temperature_min': 4.2,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 6, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.7,
      'wind_direction': 45,
      'wind_gust': 5.9,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1007.4,
      'symbol': 18,
      'temperature': 4.0,
      'temperature_max': 4.0,
      'temperature_min': 4.0,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 7, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.3,
      'wind_direction': 79,
      'wind_gust': 6.6,
      'wind_speed': 3.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.4,
      'median_precipitation': 0.3,
      'medium_cloud': 100,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1007.7,
      'symbol': 18,
      'temperature': 4.0,
      'temperature_max': 4.0,
      'temperature_min': 4.0,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 8, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.0,
      'wind_direction': 72,
      'wind_gust': 6.6,
      'wind_speed': 3.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1007.8,
      'symbol': 18,
      'temperature': 3.9,
      'temperature_max': 3.9,
      'temperature_min': 3.9,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 9, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.9,
      'wind_direction': 55,
      'wind_gust': 6.1,
      'wind_speed': 3.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1007.9,
      'symbol': 18,
      'temperature': 3.7,
      'temperature_max': 3.7,
      'temperature_min': 3.7,
      'thunder': 2,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 10, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.8,
      'wind_direction': 44,
      'wind_gust': 6.2,
      'wind_speed': 3.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 94,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.1,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1008.1,
      'symbol': 18,
      'temperature': 3.3,
      'temperature_max': 3.3,
      'temperature_min': 3.3,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.9,
      'wind_direction': 31,
      'wind_gust': 5.9,
      'wind_speed': 2.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 94,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1008.1,
      'symbol': 18,
      'temperature': 3.1,
      'temperature_max': 3.1,
      'temperature_min': 3.1,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.7,
      'wind_direction': 27,
      'wind_gust': 5.6,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.1,
      'medium_cloud': 75,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1008.0,
      'symbol': 18,
      'temperature': 3.2,
      'temperature_max': 3.2,
      'temperature_min': 3.2,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 13, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 30,
      'wind_gust': 5.2,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1008.0,
      'symbol': 6,
      'temperature': 3.3,
      'temperature_max': 3.3,
      'temperature_min': 3.3,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 14, 0, tzinfo=datetime.timezone.utc),
      'visibility': 24.0,
      'wind_direction': 19,
      'wind_gust': 4.2,
      'wind_speed': 1.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 12,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1007.6,
      'symbol': 6,
      'temperature': 3.4,
      'temperature_max': 3.4,
      'temperature_min': 3.4,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 15, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 19,
      'wind_gust': 2.9,
      'wind_speed': 1.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1007.5,
      'symbol': 6,
      'temperature': 3.5,
      'temperature_max': 3.5,
      'temperature_min': 3.5,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 16, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.6,
      'wind_direction': 13,
      'wind_gust': 2.9,
      'wind_speed': 1.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1007.6,
      'symbol': 6,
      'temperature': 3.4,
      'temperature_max': 3.4,
      'temperature_min': 3.4,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 17, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 349,
      'wind_gust': 2.6,
      'wind_speed': 0.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1007.7,
      'symbol': 6,
      'temperature': 2.9,
      'temperature_max': 2.9,
      'temperature_min': 2.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 18, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.6,
      'wind_direction': 259,
      'wind_gust': 1.7,
      'wind_speed': 0.8,
    }),
    dict({
      'frozen_precipitation': 2,
      'high_cloud': 0,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1007.5,
      'symbol': 6,
      'temperature': 2.3,
      'temperature_max': 2.3,
      'temperature_min': 2.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.8,
      'wind_direction': 248,
      'wind_gust': 2.4,
      'wind_speed': 1.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 12,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1006.9,
      'symbol': 6,
      'temperature': 2.0,
      'temperature_max': 2.0,
      'temperature_min': 2.0,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 20, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.7,
      'wind_direction': 126,
      'wind_gust': 2.1,
      'wind_speed': 1.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1006.7,
      'symbol': 6,
      'temperature': 1.9,
      'temperature_max': 1.9,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 21, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.2,
      'wind_direction': 177,
      'wind_gust': 3.1,
      'wind_speed': 1.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 98,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1006.0,
      'symbol': 6,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 22, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.0,
      'wind_direction': 169,
      'wind_gust': 3.4,
      'wind_speed': 1.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1005.5,
      'symbol': 6,
      'temperature': 1.9,
      'temperature_max': 1.9,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 3, 23, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.4,
      'wind_direction': 193,
      'wind_gust': 4.1,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 7,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1004.6,
      'symbol': 6,
      'temperature': 1.9,
      'temperature_max': 1.9,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.0,
      'wind_direction': 161,
      'wind_gust': 4.1,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1003.9,
      'symbol': 6,
      'temperature': 1.8,
      'temperature_max': 1.8,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 1, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.2,
      'wind_direction': 172,
      'wind_gust': 4.6,
      'wind_speed': 2.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 88,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.7,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1003.2,
      'symbol': 6,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 2, 0, tzinfo=datetime.timezone.utc),
      'visibility': 6.8,
      'wind_direction': 169,
      'wind_gust': 4.4,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.7,
      'mean_precipitation': 0.5,
      'median_precipitation': 0.4,
      'medium_cloud': 100,
      'min_precipitation': 0.4,
      'precipitation_category': 1,
      'pressure': 1002.3,
      'symbol': 18,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 3, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.1,
      'wind_direction': 159,
      'wind_gust': 4.5,
      'wind_speed': 2.4,
    }),
    dict({
      'frozen_precipitation': 3,
      'high_cloud': 12,
      'humidity': 95,
      'low_cloud': 100,
      'max_precipitation': 0.9,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.4,
      'medium_cloud': 100,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1001.7,
      'symbol': 18,
      'temperature': 1.5,
      'temperature_max': 1.5,
      'temperature_min': 1.5,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 4, 0, tzinfo=datetime.timezone.utc),
      'visibility': 5.3,
      'wind_direction': 180,
      'wind_gust': 6.0,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 3,
      'high_cloud': 0,
      'humidity': 96,
      'low_cloud': 100,
      'max_precipitation': 0.9,
      'mean_precipitation': 0.5,
      'median_precipitation': 0.4,
      'medium_cloud': 75,
      'min_precipitation': 0.4,
      'precipitation_category': 1,
      'pressure': 1001.3,
      'symbol': 18,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 1,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 5, 0, tzinfo=datetime.timezone.utc),
      'visibility': 9.2,
      'wind_direction': 191,
      'wind_gust': 6.4,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 3,
      'high_cloud': 0,
      'humidity': 93,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1001.0,
      'symbol': 6,
      'temperature': 2.8,
      'temperature_max': 2.8,
      'temperature_min': 2.8,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 6, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.4,
      'wind_direction': 209,
      'wind_gust': 6.4,
      'wind_speed': 3.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 90,
      'low_cloud': 100,
      'max_precipitation': 0.6,
      'mean_precipitation': 0.3,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1000.9,
      'symbol': 6,
      'temperature': 3.6,
      'temperature_max': 3.6,
      'temperature_min': 3.6,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 7, 0, tzinfo=datetime.timezone.utc),
      'visibility': 75.0,
      'wind_direction': 233,
      'wind_gust': 7.5,
      'wind_speed': 4.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 82,
      'low_cloud': 100,
      'max_precipitation': 1.1,
      'mean_precipitation': 0.2,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.3,
      'precipitation_category': 1,
      'pressure': 1001.0,
      'symbol': 6,
      'temperature': 4.3,
      'temperature_max': 4.3,
      'temperature_min': 4.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 8, 0, tzinfo=datetime.timezone.utc),
      'visibility': 15.9,
      'wind_direction': 253,
      'wind_gust': 12.5,
      'wind_speed': 6.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 79,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1001.1,
      'symbol': 6,
      'temperature': 5.0,
      'temperature_max': 5.0,
      'temperature_min': 5.0,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 9, 0, tzinfo=datetime.timezone.utc),
      'visibility': 18.2,
      'wind_direction': 257,
      'wind_gust': 12.5,
      'wind_speed': 6.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 74,
      'low_cloud': 100,
      'max_precipitation': 0.4,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1001.2,
      'symbol': 6,
      'temperature': 5.7,
      'temperature_max': 5.7,
      'temperature_min': 5.7,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 10, 0, tzinfo=datetime.timezone.utc),
      'visibility': 21.3,
      'wind_direction': 261,
      'wind_gust': 12.5,
      'wind_speed': 6.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 12,
      'humidity': 69,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1001.4,
      'symbol': 6,
      'temperature': 6.3,
      'temperature_max': 6.3,
      'temperature_min': 6.3,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 24.9,
      'wind_direction': 269,
      'wind_gust': 13.2,
      'wind_speed': 7.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 64,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1001.9,
      'symbol': 6,
      'temperature': 7.1,
      'temperature_max': 7.1,
      'temperature_min': 7.1,
      'thunder': 0,
      'total_cloud': 100,
      'valid_time': datetime.datetime(2026, 4, 4, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 28.2,
      'wind_direction': 277,
      'wind_gust': 13.3,
      'wind_speed': 7.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 59,
      'low_cloud': 75,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1002.4,
      'symbol': 4,
      'temperature': 7.8,
      'temperature_max': 7.8,
      'temperature_min': 7.8,
      'thunder': 0,
      'total_cloud': 88,
      'valid_time': datetime.datetime(2026, 4, 4, 13, 0, tzinfo=datetime.timezone.utc),
      'visibility': 31.4,
      'wind_direction': 294,
      'wind_gust': 13.3,
      'wind_speed': 6.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 54,
      'low_cloud': 62,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1003.1,
      'symbol': 4,
      'temperature': 8.4,
      'temperature_max': 8.4,
      'temperature_min': 8.4,
      'thunder': 0,
      'total_cloud': 75,
      'valid_time': datetime.datetime(2026, 4, 4, 14, 0, tzinfo=datetime.timezone.utc),
      'visibility': 35.0,
      'wind_direction': 289,
      'wind_gust': 14.2,
      'wind_speed': 7.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 51,
      'low_cloud': 50,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1003.8,
      'symbol': 3,
      'temperature': 8.4,
      'temperature_max': 8.4,
      'temperature_min': 8.4,
      'thunder': 0,
      'total_cloud': 62,
      'valid_time': datetime.datetime(2026, 4, 4, 15, 0, tzinfo=datetime.timezone.utc),
      'visibility': 37.0,
      'wind_direction': 290,
      'wind_gust': 14.8,
      'wind_speed': 7.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 51,
      'low_cloud': 38,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1004.7,
      'symbol': 3,
      'temperature': 8.1,
      'temperature_max': 8.1,
      'temperature_min': 8.1,
      'thunder': 0,
      'total_cloud': 50,
      'valid_time': datetime.datetime(2026, 4, 4, 16, 0, tzinfo=datetime.timezone.utc),
      'visibility': 36.6,
      'wind_direction': 288,
      'wind_gust': 14.0,
      'wind_speed': 6.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 52,
      'low_cloud': 12,
      'max_precipitation': 0.1,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1005.6,
      'symbol': 2,
      'temperature': 7.6,
      'temperature_max': 7.6,
      'temperature_min': 7.6,
      'thunder': 0,
      'total_cloud': 38,
      'valid_time': datetime.datetime(2026, 4, 4, 17, 0, tzinfo=datetime.timezone.utc),
      'visibility': 75.0,
      'wind_direction': 280,
      'wind_gust': 12.3,
      'wind_speed': 5.7,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 56,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1006.5,
      'symbol': 1,
      'temperature': 6.2,
      'temperature_max': 6.2,
      'temperature_min': 6.2,
      'thunder': 0,
      'total_cloud': 0,
      'valid_time': datetime.datetime(2026, 4, 4, 18, 0, tzinfo=datetime.timezone.utc),
      'visibility': 75.0,
      'wind_direction': 271,
      'wind_gust': 10.3,
      'wind_speed': 5.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 64,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1007.3,
      'symbol': 1,
      'temperature': 5.1,
      'temperature_max': 5.1,
      'temperature_min': 5.1,
      'thunder': 0,
      'total_cloud': 0,
      'valid_time': datetime.datetime(2026, 4, 4, 19, 0, tzinfo=datetime.timezone.utc),
      'visibility': 75.0,
      'wind_direction': 254,
      'wind_gust': 9.1,
      'wind_speed': 3.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 75,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1008.1,
      'symbol': 1,
      'temperature': 3.9,
      'temperature_max': 3.9,
      'temperature_min': 3.9,
      'thunder': 0,
      'total_cloud': 0,
      'valid_time': datetime.datetime(2026, 4, 4, 20, 0, tzinfo=datetime.timezone.utc),
      'visibility': 21.1,
      'wind_direction': 257,
      'wind_gust': 7.1,
      'wind_speed': 3.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 82,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1008.8,
      'symbol': 1,
      'temperature': 2.8,
      'temperature_max': 2.8,
      'temperature_min': 2.8,
      'thunder': 0,
      'total_cloud': 0,
      'valid_time': datetime.datetime(2026, 4, 4, 21, 0, tzinfo=datetime.timezone.utc),
      'visibility': 16.5,
      'wind_direction': 265,
      'wind_gust': 7.0,
      'wind_speed': 2.9,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 86,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.5,
      'symbol': 1,
      'temperature': 1.7,
      'temperature_max': 1.7,
      'temperature_min': 1.7,
      'thunder': 0,
      'total_cloud': 0,
      'valid_time': datetime.datetime(2026, 4, 4, 22, 0, tzinfo=datetime.timezone.utc),
      'visibility': 13.7,
      'wind_direction': 251,
      'wind_gust': 5.1,
      'wind_speed': 2.4,
    }),
  ])
# ---
# name: test_api[twice_daily_forecast]
  list([
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 80,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1011.5,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 2, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 17.9,
      'wind_direction': 255,
      'wind_gust': 6.8,
      'wind_speed': 3.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 80,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 1,
      'pressure': 1011.5,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 2, 11, 0, tzinfo=datetime.timezone.utc),
      'visibility': 17.9,
      'wind_direction': 255,
      'wind_gust': 6.8,
      'wind_speed': 3.4,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 79,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 100,
      'min_precipitation': 0.1,
      'precipitation_category': 11,
      'pressure': 1011.3,
      'symbol': 6,
      'temperature': 10.4,
      'temperature_max': 10.4,
      'temperature_min': 10.4,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 2, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 18.4,
      'wind_direction': 245,
      'wind_gust': 6.7,
      'wind_speed': 3.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.02,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1008.2,
      'symbol': 18,
      'temperature': 5.3,
      'temperature_max': 10.4,
      'temperature_min': 5.3,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 0.2,
      'valid_time': datetime.datetime(2026, 4, 3, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.3,
      'wind_direction': 138,
      'wind_gust': 1.2,
      'wind_speed': 0.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 94,
      'low_cloud': 100,
      'max_precipitation': 0.3,
      'mean_precipitation': 0.02,
      'median_precipitation': 0.2,
      'medium_cloud': 100,
      'min_precipitation': 0.2,
      'precipitation_category': 11,
      'pressure': 1008.1,
      'symbol': 18,
      'temperature': 3.1,
      'temperature_max': 10.4,
      'temperature_min': 3.1,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 0.2,
      'valid_time': datetime.datetime(2026, 4, 3, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 7.7,
      'wind_direction': 27,
      'wind_gust': 5.6,
      'wind_speed': 2.7,
    }),
    dict({
      'frozen_precipitation': 7,
      'high_cloud': 100,
      'humidity': 97,
      'low_cloud': 100,
      'max_precipitation': 0.2,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1004.6,
      'symbol': 6,
      'temperature': 1.9,
      'temperature_max': 10.4,
      'temperature_min': 1.9,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 4, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 8.0,
      'wind_direction': 161,
      'wind_gust': 4.1,
      'wind_speed': 2.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 64,
      'low_cloud': 100,
      'max_precipitation': 0.5,
      'mean_precipitation': 0.01,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 0.2,
      'precipitation_category': 1,
      'pressure': 1001.9,
      'symbol': 6,
      'temperature': 7.1,
      'temperature_max': 10.4,
      'temperature_min': 7.1,
      'thunder': 0,
      'total_cloud': 100,
      'total_precipitation': 0.1,
      'valid_time': datetime.datetime(2026, 4, 4, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 28.2,
      'wind_direction': 277,
      'wind_gust': 13.3,
      'wind_speed': 7.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 82,
      'low_cloud': 0,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1009.4,
      'symbol': 3,
      'temperature': 2.3,
      'temperature_max': 10.4,
      'temperature_min': 2.3,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 5, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 13.2,
      'wind_direction': 254,
      'wind_gust': 8.4,
      'wind_speed': 4.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 100,
      'humidity': 81,
      'low_cloud': 62,
      'max_precipitation': 16.2,
      'mean_precipitation': 0.9,
      'median_precipitation': 0.32,
      'medium_cloud': 100,
      'min_precipitation': 7.8,
      'precipitation_category': 1,
      'pressure': 999.0,
      'symbol': 18,
      'temperature': 8.3,
      'temperature_max': 10.4,
      'temperature_min': 8.3,
      'thunder': 1,
      'total_cloud': 100,
      'total_precipitation': 10.8,
      'valid_time': datetime.datetime(2026, 4, 5, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.6,
      'wind_direction': 182,
      'wind_gust': 13.0,
      'wind_speed': 6.9,
    }),
    dict({
      'frozen_precipitation': 56,
      'high_cloud': 0,
      'humidity': 69,
      'low_cloud': 0,
      'max_precipitation': 6.0,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 88,
      'min_precipitation': 3.0,
      'precipitation_category': 6,
      'pressure': 995.0,
      'symbol': 4,
      'temperature': 4.0,
      'temperature_max': 10.4,
      'temperature_min': 4.0,
      'thunder': 0,
      'total_cloud': 88,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2026, 4, 6, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 50.0,
      'wind_direction': 240,
      'wind_gust': 16.9,
      'wind_speed': 8.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 75,
      'humidity': 40,
      'low_cloud': 12,
      'max_precipitation': 4.8,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 75,
      'min_precipitation': 2.4,
      'precipitation_category': 1,
      'pressure': 1001.5,
      'symbol': 4,
      'temperature': 10.3,
      'temperature_max': 10.4,
      'temperature_min': 10.3,
      'thunder': 0,
      'total_cloud': 88,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2026, 4, 6, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 36.0,
      'wind_direction': 290,
      'wind_gust': 19.6,
      'wind_speed': 9.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 57,
      'low_cloud': 0,
      'max_precipitation': 2.4,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 1.2,
      'precipitation_category': 1,
      'pressure': 1013.3,
      'symbol': 1,
      'temperature': 5.4,
      'temperature_max': 10.4,
      'temperature_min': 5.4,
      'thunder': 0,
      'total_cloud': 0,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 7, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 25.8,
      'wind_direction': 315,
      'wind_gust': 10.0,
      'wind_speed': 5.3,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 37,
      'low_cloud': 12,
      'max_precipitation': 3.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 3.0,
      'precipitation_category': 1,
      'pressure': 1021.1,
      'symbol': 3,
      'temperature': 10.3,
      'temperature_max': 10.4,
      'temperature_min': 10.3,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 7, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 37.9,
      'wind_direction': 352,
      'wind_gust': 12.5,
      'wind_speed': 6.1,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 83,
      'low_cloud': 25,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1027.0,
      'symbol': 2,
      'temperature': 2.2,
      'temperature_max': 10.4,
      'temperature_min': 2.2,
      'thunder': 0,
      'total_cloud': 25,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 8, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 12.3,
      'wind_direction': 3,
      'wind_gust': 6.5,
      'wind_speed': 3.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 0,
      'humidity': 57,
      'low_cloud': 75,
      'max_precipitation': 0.0,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 0.0,
      'precipitation_category': 0,
      'pressure': 1028.8,
      'symbol': 4,
      'temperature': 7.8,
      'temperature_max': 10.4,
      'temperature_min': 7.8,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 26.2,
      'wind_direction': 46,
      'wind_gust': 10.6,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 100,
      'high_cloud': 0,
      'humidity': 85,
      'low_cloud': 0,
      'max_precipitation': 16.8,
      'mean_precipitation': 0.0,
      'median_precipitation': 0.0,
      'medium_cloud': 0,
      'min_precipitation': 16.8,
      'precipitation_category': 5,
      'pressure': 1028.4,
      'symbol': 1,
      'temperature': -1.5,
      'temperature_max': 10.4,
      'temperature_min': -1.5,
      'thunder': 0,
      'total_cloud': 12,
      'total_precipitation': 0.0,
      'valid_time': datetime.datetime(2026, 4, 9, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 11.3,
      'wind_direction': 57,
      'wind_gust': 7.2,
      'wind_speed': 3.0,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 48,
      'low_cloud': 25,
      'max_precipitation': 32.4,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 25,
      'min_precipitation': 22.8,
      'precipitation_category': 1,
      'pressure': 1024.4,
      'symbol': 3,
      'temperature': 6.5,
      'temperature_max': 10.4,
      'temperature_min': 6.5,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2026, 4, 9, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 34.8,
      'wind_direction': 104,
      'wind_gust': 10.3,
      'wind_speed': 5.0,
    }),
    dict({
      'frozen_precipitation': 88,
      'high_cloud': 38,
      'humidity': 82,
      'low_cloud': 25,
      'max_precipitation': 56.4,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 33.6,
      'precipitation_category': 5,
      'pressure': 1021.1,
      'symbol': 3,
      'temperature': -0.1,
      'temperature_max': 10.4,
      'temperature_min': -0.1,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 7.2,
      'valid_time': datetime.datetime(2026, 4, 10, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 17.3,
      'wind_direction': 87,
      'wind_gust': 7.9,
      'wind_speed': 3.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 25,
      'humidity': 47,
      'low_cloud': 38,
      'max_precipitation': 27.6,
      'mean_precipitation': 0.5,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 10.8,
      'precipitation_category': 1,
      'pressure': 1020.2,
      'symbol': 3,
      'temperature': 6.7,
      'temperature_max': 10.4,
      'temperature_min': 6.7,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 6.0,
      'valid_time': datetime.datetime(2026, 4, 10, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 36.1,
      'wind_direction': 103,
      'wind_gust': 10.4,
      'wind_speed': 4.8,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 79,
      'low_cloud': 25,
      'max_precipitation': 15.6,
      'mean_precipitation': 0.1,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 8.4,
      'precipitation_category': 1,
      'pressure': 1019.0,
      'symbol': 3,
      'temperature': 0.6,
      'temperature_max': 10.4,
      'temperature_min': 0.6,
      'thunder': 0,
      'total_cloud': 62,
      'total_precipitation': 1.2,
      'valid_time': datetime.datetime(2026, 4, 11, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 22.9,
      'wind_direction': 111,
      'wind_gust': 7.2,
      'wind_speed': 3.2,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 38,
      'humidity': 50,
      'low_cloud': 38,
      'max_precipitation': 34.8,
      'mean_precipitation': 0.7,
      'median_precipitation': 0.0,
      'medium_cloud': 62,
      'min_precipitation': 10.8,
      'precipitation_category': 1,
      'pressure': 1016.6,
      'symbol': 4,
      'temperature': 7.4,
      'temperature_max': 10.4,
      'temperature_min': 7.4,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 8.4,
      'valid_time': datetime.datetime(2026, 4, 11, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 26.0,
      'wind_direction': 136,
      'wind_gust': 11.5,
      'wind_speed': 5.5,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 79,
      'low_cloud': 25,
      'max_precipitation': 60.0,
      'mean_precipitation': 0.8,
      'median_precipitation': 0.0,
      'medium_cloud': 38,
      'min_precipitation': 15.6,
      'precipitation_category': 1,
      'pressure': 1016.4,
      'symbol': 3,
      'temperature': 1.8,
      'temperature_max': 10.4,
      'temperature_min': 1.8,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 9.6,
      'valid_time': datetime.datetime(2026, 4, 12, 0, 0, tzinfo=datetime.timezone.utc),
      'visibility': 15.5,
      'wind_direction': 125,
      'wind_gust': 8.1,
      'wind_speed': 3.6,
    }),
    dict({
      'frozen_precipitation': 0,
      'high_cloud': 50,
      'humidity': 51,
      'low_cloud': 38,
      'max_precipitation': 33.6,
      'mean_precipitation': 0.6,
      'median_precipitation': 0.0,
      'medium_cloud': 50,
      'min_precipitation': 9.6,
      'precipitation_category': 1,
      'pressure': 1016.3,
      'symbol': 4,
      'temperature': 8.3,
      'temperature_max': 10.4,
      'temperature_min': 8.3,
      'thunder': 0,
      'total_cloud': 75,
      'total_precipitation': 7.2,
      'valid_time': datetime.datetime(2026, 4, 12, 12, 0, tzinfo=datetime.timezone.utc),
      'visibility': 20.6,
      'wind_direction': 119,
      'wind_gust': 11.1,
      'wind_speed': 5.1,
    }),
  ])
# ---
